# speech

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.map/: LOG.md  PLAN.md
.map/tasks/: 01-local-signing-notarization.md  01-macos-permission-assistant-r2.md  01-macos-permission-assistant-takeover-fix.md  01-macos-permission-assistant-takeover.md  01-macos-permission-assistant.md  01-microphone-shutdown.md  02-ci-signing-credentials.md  02-posix-single-instance.md  02-safe-macos-hotkey-relaunch.md
docs/: configuration.md  troubleshooting.md
installer/: Speech.iss
packaging/: Speech.spec  build-linux.sh  speech_launcher.py
packaging/linux/: speech  speech.desktop
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  make_demo_gif.py  make_hotkeys_gif.py  make_linux_gif.py  write_build_version.py
src/winwhisper/: __init__.py  _build_version.py  audio_inputs.py  branding.py  config.py  diagnostics.py  focus.py  formatter.py  hotkey_actions.py  hotkey_settings.py  hotkey_settings_window.py  hotkeys.py  inserter.py  language_settings_window.py  languages.py  linux_shape.py  logger.py  macos_permissions.py  main.py  native_overlay.py  native_overlay_mac.py  overlay.py  permission_setup_window.py  recorder.py  recorder_mac.py  transcriber.py  tray.py  update_controller.py  updater.py
src/winwhisper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_audio_inputs.py  test_config.py  test_diagnostics.py  test_focus.py  test_formatter.py  test_hotkey_settings.py  test_hotkey_settings_window.py  test_hotkeys.py  test_inserter.py  test_language_settings_window.py  test_languages.py  test_linux_shape.py  test_logger.py  test_macos_packaging.py  test_macos_permissions.py  test_main.py  test_overlay_flow.py  test_permission_setup_window.py  test_recorder.py  test_recorder_mac.py  test_transcriber_prompt.py  test_tray.py  test_updater.py
