[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speech"
version = "0.1.12"
description = "Cross-platform tray app for local speech dictation with faster-whisper."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper",
  "sounddevice",
  "numpy",
  "pynput",
  "pyperclip",
  "pystray",
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
  "pillow",
  "python-dotenv",
  "pydantic",
  "openai",
  "truststore",
  "PyGObject==3.50.0; sys_platform == 'linux'",
  "python-xlib; sys_platform == 'linux'",
]

[project.scripts]
speech = "winwhisper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
