[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speech"
version = "0.1.12"
description = "Cross-platform tray app for local speech dictation with faster-whisper."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper",
  "sounddevice",
  "numpy",
  "pynput",
  "pyperclip",
  "pystray",
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
  "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
  "pillow",
  "python-dotenv",
  "pydantic",
  "openai",
  "truststore",
  # PyGObject drives the Linux AppIndicator tray backend. The tray is the only
  # Linux UI, so this is required, not optional: without it, `import pystray`
  # fails at startup with "No module named 'gi'". Capped below 3.50 because
  # 3.50+ builds against girepository-2.0 (glib 2.80 / Ubuntu 24.04+); the
  # release CI runs on Ubuntu 22.04, whose libgirepository1.0-dev provides
  # girepository-1.0. Building from source needs system libs:
  # libgirepository1.0-dev, libcairo2-dev, and pkg-config (Debian/Ubuntu).
  "PyGObject>=3.56.3,<3.57; sys_platform == 'linux'",
  "python-xlib; sys_platform == 'linux'",
]

[project.scripts]
speech = "winwhisper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
